--- a/wh.html
+++ b/wh.html
@@ -16,7 +16,6 @@
         .overlay { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.5); display: flex; align-items: center; justify-content: center; z-index: 1000; opacity: 0; visibility: hidden; transition: opacity 0.3s, visibility 0.3s; padding: 1rem; }
         .overlay.visible { opacity: 1; visibility: visible; }
         .modal-content { background: white; padding: 1.5rem; border-radius: 0.5rem; width: 100%; max-width: 800px; max-height: 90vh; overflow-y: auto; transform: scale(0.9); transition: transform 0.3s; }
-        .worker-modal { max-width: 500px; }
         .loader { border: 4px solid #f3f3f3; border-top: 4px solid var(--theme-color); border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
         #notification { position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); background-color: #2d3748; color: white; padding: 1rem 1.5rem; border-radius: 0.5rem; box-shadow: 0 4px 12px rgba(0,0,0,0.15); z-index: 2000; text-align: center; transition: transform 0.5s, opacity 0.5s; transform: translateY(100px); opacity: 0; }
@@ -97,6 +96,7 @@
         let usersCache = [];
         let workersCache = [];
 
+        // --- UI HELPER FUNCTIONS ---
         const showLoader = () => document.getElementById('loader-overlay').classList.add('visible');
         const hideLoader = () => document.getElementById('loader-overlay').classList.remove('visible');
         const openModal = (id) => document.getElementById(id).classList.add('visible');
@@ -110,6 +110,7 @@
         }
         window.signOut = () => signOut(auth);
 
+        // --- AUTHENTICATION ---
         onAuthStateChanged(auth, async (user) => {
             if (user) {
                 const userDocRef = doc(db, 'users', user.uid);
@@ -136,7 +137,13 @@
         async function loadInitialData() {
             const usersQuery = query(collection(db, 'users'));
             const userSnapshot = await getDocs(usersQuery);
-            usersCache = userSnapshot.docs.map(d => ({ id: d.id, ...d.data() }));
+            usersCache = userSnapshot.docs.map(d => {
+                const userData = d.data();
+                if (!userData.pod_role) {
+                    userData.pod_role = (userData.role === 'admin' || userData.role === 'supervisor') ? 'supervisor' : 'worker';
+                }
+                return { id: d.id, ...userData };
+            });
             workersCache = usersCache.filter(u => u.pod_role === 'worker').map(u => u.displayName);
             renderUIBasedOnRole();
         }
