--- a/a.html
+++ b/a.html
@@ -712,17 +712,16 @@
         let fileIdToReject = null; 
         let profitChartInstance = null;
 
-   // --- Firebase Configuration ---
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
-    apiKey: "AIzaSyAAu1R2nJQM-4QTNyEqkTnnDPw-1KW92Mc",
-    authDomain: "my-job-file-system.firebaseapp.com",
-    projectId: "my-job-file-system",
-    storageBucket: "my-job-file-system.appspot.com",
-    messagingSenderId: "145307873304",
-    appId: "1:145307873304:web:d661ea6ec118801b4a136d",
-    measurementId: "G-8EHX5K7YHL"
+  apiKey: "AIzaSyAAulR2nJQm-4QtNyEqKTnnDPw-iKW92Mc",
+  authDomain: "my-job-file-system.firebaseapp.com",
+  projectId: "my-job-file-system",
+  storageBucket: "my-job-file-system.firebasestorage.app",
+  messagingSenderId: "145307873304",
+  appId: "1:145307873304:web:d661ea6ec118801b4a136d",
+  measurementId: "G-8EHX5K7YHL"
 };
-
 
         // --- Firebase Initialization ---
         async function initializeFirebase() {
