--- a/index.html
+++ b/index.html
@@ -80,20 +80,6 @@
             </div>
         </div>
 
-        <!-- Checker Info Banner -->
-        <div id="checker-info-banner" class="checker-only bg-blue-100 border-l-4 border-blue-500 text-blue-700 p-4" style="display: none;">
-            <div class="flex">
-                <div class="flex-shrink-0">
-                    <svg class="h-5 w-5 text-blue-400" viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
-                    </svg>
-                </div>
-                <div class="ml-3">
-                    <p class="text-sm">You have checker/admin privileges. You can check and approve job files.</p>
-                </div>
-            </div>
-        </div>
-
         <!-- Rejection Banner -->
         <div id="rejection-banner" class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 mb-4" style="display: none;">
             <div class="flex">
@@ -105,6 +91,20 @@
                 <div class="ml-3">
                     <p class="text-sm"><strong>This job file has been rejected.</strong></p>
                     <p class="text-sm mt-1">Reason: <span id="rejection-reason" class="font-medium"></span></p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Checker Info Banner -->
+        <div id="checker-info-banner" class="checker-only bg-blue-100 border-l-4 border-blue-500 text-blue-700 p-4 mb-4 text-center" style="display: none;">
+            <div class="flex justify-center">
+                <div class="flex-shrink-0">
+                    <svg class="h-5 w-5 text-blue-400" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
+                    </svg>
+                </div>
+                <div class="ml-3">
+                    <p class="text-sm">You have checker/admin privileges. You can check and approve job files.</p>
                 </div>
             </div>
         </div>
