--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Load modular JavaScript files -->
+    <script src="js/auth.js"></script>
+    <script src="js/analytics.js"></script>
+    <script src="js/admin.js"></script>
+    <script src="js/fileManager.js"></script>
+    <script src="js/delivery.js"></script>
+    <script src="js/driver.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body class="bg-gray-100">
     <!-- Login Screen -->
