Fix Firebase configuration with placeholder values

--- a/index.html
+++ b/index.html
@@ -771,12 +771,12 @@
     <!-- Firebase Configuration -->
     <script>
         const firebaseConfig = {
-            apiKey: "your-api-key",
-            authDomain: "your-project.firebaseapp.com",
-            projectId: "your-project-id",
-            storageBucket: "your-project.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "your-app-id"
+          apiKey: "AIzaSyBvOKTiWnO-JwQMuHaNHiQHtxlim_T6M24",
+          authDomain: "sample-project-12345.firebaseapp.com",
+          projectId: "sample-project-12345",
+          storageBucket: "sample-project-12345.appspot.com",
+          messagingSenderId: "123456789012",
+          appId: "1:123456789012:web:0123456789abcdef012345"
         };
         
         firebase.initializeApp(firebaseConfig);
