Update Firebase configuration with real project values

--- a/index.html
+++ b/index.html
@@ -771,12 +771,13 @@
     <!-- Firebase Configuration -->
     <script>
         const firebaseConfig = {
-          apiKey: "AIzaSyBvOKTiWnO-JwQMuHaNHiQHtxlim_T6M24",
-          authDomain: "sample-project-12345.firebaseapp.com",
-          projectId: "sample-project-12345",
-          storageBucket: "sample-project-12345.appspot.com",
-          messagingSenderId: "123456789012",
-          appId: "1:123456789012:web:0123456789abcdef012345"
+          apiKey: "AIzaSyAAulR2nJQm-4QtNyEqKTnnDPw-iKW92Mc",
+          authDomain: "my-job-file-system.firebaseapp.com",
+          projectId: "my-job-file-system",
+          storageBucket: "my-job-file-system.firebasestorage.app",
+          messagingSenderId: "145307873304",
+          appId: "1:145307873304:web:d661ea6ec118801b4a136d",
+          measurementId: "G-8EHX5K7YHL"
         };
         
         firebase.initializeApp(firebaseConfig);
