--- a/reports.html
+++ b/reports.html
@@ -205,6 +205,7 @@
                 <li><a href="admin.html"><i class="fas fa-cog"></i> Admin Panel</a></li>
                 <li><a href="filemanager.html"><i class="fas fa-folder"></i> File Manager</a></li>
                 <li><a href="users.html"><i class="fas fa-users"></i> Users</a></li>
+                <li><a href="jobs.html"><i class="fas fa-briefcase"></i> Jobs</a></li>
                 <li><a href="settings.html"><i class="fas fa-sliders-h"></i> Settings</a></li>
             </ul>
         </nav>
