--- a/index.html
+++ b/index.html
@@ -24,10 +24,20 @@
 </head>
 <body class="bg-gray-100">
     <div id="app">
-        <div class="min-h-screen flex items-center justify-center">
+        <div class="min-h-screen flex items-center justify-center bg-gradient-to-br from-purple-50 via-white to-blue-50">
             <div class="text-center">
-                <div class="loader mx-auto mb-4"></div>
-                <p class="text-gray-600">Loading Q'go Cargo Management System...</p>
+                <div class="w-16 h-16 bg-gradient-to-r from-purple-500 to-blue-500 rounded-2xl flex items-center justify-center mx-auto mb-6">
+                    <svg class="w-8 h-8 text-white animate-spin" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
+                    </svg>
+                </div>
+                <div class="text-3xl font-bold bg-gradient-to-r from-purple-600 to-blue-600 bg-clip-text text-transparent mb-4">
+                    Q'go Cargo
+                </div>
+                <p class="text-gray-600 text-lg">Loading Management System...</p>
+                <div class="mt-6 w-64 mx-auto bg-gray-200 rounded-full h-2">
+                    <div class="bg-gradient-to-r from-purple-500 to-blue-500 h-2 rounded-full animate-pulse" style="width: 70%"></div>
+                </div>
             </div>
         </div>
     </div>
