--- a/job-file.html
+++ b/job-file.html
@@ -2410,7 +2410,16 @@
                 chargeDescriptions = JSON.parse(storedDescriptions);
             } else {
                 chargeDescriptions = [
-                    'Ex-works Charges:', 'Land/Air / Sea Freight:', 'Fuell Security / War Surcharge:', 'Formalities:', 'Delivery Order Fee:', 'Transportation Charges:', 'Inspection / Computer Print Charges:', 'Handling Charges:', 'Labor / Forklift Charges:', 'Documentation Charges:', 'Clearance Charges:', 'Customs Duty:', 'Terminal Handling Charges:', 'Legalization Charges:', 'Demurrage Charges:', 'Loading / Offloading Charges:', 'Destination Clearance Charges:', 'Packing Charges:', 'Port Charges:', 'Other Charges:', 'PAI Approval :', 'Insurance Fee :', 'EPA Charges :'
+                    'Ex-works Charges:', 'Land/Air / Sea Freight:', 'Fuel Security / War Surcharge:', 
+                    'Formalities:', 'Delivery Order Fee:', 'Transportation Charges:', 
+                    'Inspection / Computer Print Charges:', 'Handling Charges:', 'Labor / Forklift Charges:', 
+                    'Documentation Charges:', 'Clearance Charges:', 'Customs Duty:', 
+                    'Terminal Handling Charges:', 'Legalization Charges:', 'Demurrage Charges:', 
+                    'Loading / Offloading Charges:', 'Destination Clearance Charges:', 'Packing Charges:', 
+                    'Port Charges:', 'Other Charges:', 'PAI Approval:', 'Insurance Fee:', 'EPA Charges:',
+                    'Storage Charges:', 'Warehouse Charges:', 'Container Charges:', 'Stuffing Charges:',
+                    'Unstuffing Charges:', 'Weighing Charges:', 'Scanning Charges:', 'X-Ray Charges:',
+                    'Certificate Charges:', 'Stamp Duty:', 'Bank Charges:', 'Commission:'
                 ];
                 localStorage.setItem('chargeDescriptions', JSON.stringify(chargeDescriptions));
             }
