--- a/job-file.html
+++ b/job-file.html
@@ -171,6 +171,7 @@
                 </div>
                 <div class="flex items-center space-x-4">
                     <a href="index.html" class="text-gray-600 hover:text-gray-900">Dashboard</a>
+                    <a href="analytics.html" class="text-gray-600 hover:text-gray-900">Analytics</a>
                     <span class="text-sm text-gray-600">Welcome, <span id="user-display-name"></span></span>
                     <button onclick="logout()" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-md text-sm">
                         Logout
@@ -990,6 +991,15 @@
                         <div class="space-x-2 flex-shrink-0">
                             <button onclick="previewJobFileById('${docData.id}')" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-1 px-3 rounded text-sm">Preview</button>
                             <button onclick="loadJobFileById('${docData.id}')" class="bg-green-500 hover:bg-green-600 text-white font-bold py-1 px-3 rounded text-sm">Load</button>
+                            ${currentUser.role === 'checker' || currentUser.role === 'admin' ? `
+                                ${docData.status === 'pending' ? `
+                                    <button onclick="checkJobFile('${docData.id}')" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-1 px-3 rounded text-sm">Check</button>
+                                ` : ''}
+                                ${docData.status === 'checked' && currentUser.role === 'admin' ? `
+                                    <button onclick="approveJobFile('${docData.id}')" class="bg-green-600 hover:bg-green-700 text-white font-bold py-1 px-3 rounded text-sm">Approve</button>
+                                    <button onclick="rejectJobFile('${docData.id}')" class="bg-red-600 hover:bg-red-700 text-white font-bold py-1 px-3 rounded text-sm">Reject</button>
+                                ` : ''}
+                            ` : ''}
                             ${deleteButton}
                         </div>
                     </div>
@@ -1626,6 +1636,10 @@
 
         function refreshOpenModals() {
             // Placeholder for modal refresh functionality
+        }
+
+        function refreshJobFilesList() {
+            loadJobFiles();
         }
 
         // --- GEMINI API INTEGRATION ---
@@ -2493,6 +2507,8 @@
             window.saveChargeDescription = saveChargeDescription;
             window.deleteChargeDescription = deleteChargeDescription;
             window.addChargeRow = addChargeRow;
+            window.refreshJobFilesList = refreshJobFilesList;
+            window.rejectJobFile = rejectJobFile;
             window.logout = async () => {
                 await signOut(auth);
                 window.location.href = 'login.html';
