--- a/admin.html
+++ b/admin.html
@@ -24,6 +24,7 @@
                 </div>
                 <div class="flex items-center space-x-4">
                     <a href="index.html" class="text-gray-600 hover:text-gray-900">Dashboard</a>
+                    <a href="analytics.html" class="text-gray-600 hover:text-gray-900">Analytics</a>
                     <a href="job-file.html" class="text-gray-600 hover:text-gray-900">Job Files</a>
                     <button onclick="logout()" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-md text-sm">
                         Logout
