--- a/pod.html
+++ b/pod.html
@@ -400,11 +400,11 @@
                 </div>
                 <div>
                     <label for="receiver-name" class="block text-sm font-medium text-gray-700">Receiver's Name</label>
-                    <input type="text" id="receiver-name" class="input-field mt-1" required>
+                    <input type="text" id="receiver-name" class="input-field mt-1">
                 </div>
                 <div>
                     <label for="receiver-mobile" class="block text-sm font-medium text-gray-700">Receiver's Mobile Number</label>
-                    <input type="tel" id="receiver-mobile" class="input-field mt-1" required>
+                    <input type="tel" id="receiver-mobile" class="input-field mt-1">
                 </div>
                  
                 <div>
